Regression: edge snap on multiple objects causes Blender to crash #97490

Closed
opened 2022-04-21 00:04:55 +02:00 by Norbert Kowalczyk · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Caused by 4b35d6950d

Short description of error
When I try to move vertices selected (multiple objects, grid+vertices snap) in the file in the Z direction - Blender crashes.

Exact steps for others to reproduce the error
The selection of two separate objects is already saved in the file uploaded in this ticket. In 3D viewport try to move selection upwards using Z axis (snapping tool enabled) and Blender should crash. Not sure what is causing the problem but when I disable snapping (increment+vertices snap) everything works fine.
My idea is that Blender tries to snap each other's vertices of two objects that are being edited in the same time which causes a heavy loop that crashes the program.

  • Open .blend file
  • Move selection and try to snap onto faces

Screenshots
Snapping tool options:
image.png
Viewport 3D with movement explained
crashImage.png

File: crashingFile.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Caused by 4b35d6950d **Short description of error** When I try to move vertices selected (multiple objects, grid+vertices snap) in the file in the Z direction - Blender crashes. **Exact steps for others to reproduce the error** The selection of two separate objects is already saved in the file uploaded in this ticket. In 3D viewport try to move selection upwards using Z axis (snapping tool enabled) and Blender should crash. Not sure what is causing the problem but when I disable snapping (increment+vertices snap) everything works fine. My idea is that Blender tries to snap each other's vertices of two objects that are being edited in the same time which causes a heavy loop that crashes the program. - Open .blend file - Move selection and try to snap onto faces **Screenshots** Snapping tool options: ![image.png](https://archive.blender.org/developer/F13013017/image.png) Viewport 3D with movement explained ![crashImage.png](https://archive.blender.org/developer/F13013015/crashImage.png) File: [crashingFile.blend](https://archive.blender.org/developer/F13013020/crashingFile.blend)

Added subscriber: @TherockyDoo

Added subscriber: @TherockyDoo
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report.
I can confirm the crash. checking...

Thanks for the report. I can confirm the crash. checking...
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Crash introduced in {4b35d6950d4f448b84738e8d36d4f3ac554924e9}
@mano-wii ^

Crash introduced in {4b35d6950d4f448b84738e8d36d4f3ac554924e9} @mano-wii ^
Pratik Borhade changed title from Working with grid and edge snap on multiple objects causes Blender to crash to Regression: edge snap on multiple objects causes Blender to crash 2022-04-21 07:13:03 +02:00
Germano Cavalcante self-assigned this 2022-04-21 17:57:08 +02:00

This issue was referenced by 9de3ed5c82

This issue was referenced by 9de3ed5c823ed79c3584765141d4f1c160add4d3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97490
No description provided.